New : update about page

--- a/src/pages/page-about/index.fr.mdx
+++ b/src/pages/page-about/index.fr.mdx
@@ -8,212 +8,102 @@ description: A propos de Maxime Touroute
 image: profile.jpg
 priority: 0
 embeddedImagesLocal:
-  - profile.jpg
+  - Maxime_CJuliaGuerin.jpg
 ---
 
-<MdxImage alt={"Photo portrait de Maxime Touroute"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
+<MdxImage alt={"Photo portrait de Maxime Touroute par Julia Guérin"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
 
-<br />
-<br />
+<br/>
+_« Je m’investis sur des projets où création et technologie se rencontrent, en collaboration avec tous types d’artistes et structures culturelles. J’explore les technologies à l’état de l’art pour débloquer de nouveaux possibles créatifs. Je partage mes logiciels avec tous pour casser les barrières techniques, encourager la collaboration et démocratiser la création numérique. Formé ingénieur et entrepreneur, je n'ai pas peur des challenges technico-créatifs. »_
+<br/>
+— Ce que je fais
+* Produire et diffuser mes créations
+* Rejoindre des équipes artistiques en tant qu'ingénieur technico-créatif et artiste
+* Assister des structures culturelles sur leurs projets de médiation, d'accessibilité et de sensibilisation
+* Développer et mutualiser des logiciels avec structures culturelles et créateur.ice.s
 
-
-Passionné d'audiovisuel et d'arts numériques, je m'investis sur des projets où créativité et technologie se mêlent.
-
-Formé ingénieur informatique, je n'ai pas peur de m'attaquer aux toutes dernières technologies pour débloquer de nouvelles possibilités créatives.
-
-
-### — Ce que je fais
-
-* Rejoindre des équipes artistiques en tant que développeur, régisseur, vidéaste
-* Produire et diffuser des créations originales
-* Développer et mutualiser des logiciels avec institutions culturelles et artistes
-
-
-### — Mes compétences
+— Mes compétences
 * Développement Informatique (web, IA, 3D, natif...)
-* Direction artistique, production
-* Gestion de projet, management
-* Entrepreneuriat
-* Réalisation vidéo, du tournage à la post-production
+* Direction artistique (vidéo, mapping, réalité augmentée, créations hybrides danse, théâtre, musique, street art...)
+* Gestion de projet, entrepreneuriat
+
+*— Actuellement ouvert aux nouveaux projets, [contact@maximetouroute.com](mailto:contact@maximetouroute.com)*
+
+<br />
+<br />
+
+___
+
+<br />
+<br />
 
 
-### — Actuellement ouvert aux nouveaux projets
-[contact@maximetouroute.com](mailto:contact@maximetouroute.com)
+# Biographie 
 
-<br/>
-<br/>
-<br/>
+**Maxime Touroute est un artiste qui explore les intersections entre technologie et humanité.**
 
+Son travail questionne la manière dont nos traits les plus humains  — créativité, comportement interactionnel, sens du collectif — sont transformés par l'ère numérique. À travers des expériences participatives et immersives, il invite les publics à réfléchir aux liens qui nous unissent dans un monde façonné par la technologie.
 
-<br/>
-<br/>
-<br/>
+Sa première création, *Let’s Draw* *(80+ expositions, 10 pays)*, transforme les espaces publics en toiles interactives géantes où les participants dessinent ensemble en temps réel sur un vidéo mapping. En exploitant la technologie pour amplifier la création collective, *Let’s Draw* révèle nos imaginaires collectifs autour de thèmes universels : comment dessiner un arbre, comment dessiner l’amour, comment dessiner notre monde ?
+
+Sa dernière création, *The Invisible Party* *(co-autrice Natacha Paquignon, co-produite par Enter Art Fair)*, est une performance de danse en réalité mixte où deux danseuses interagissent avec une représentation virtuelle d’elles-mêmes. Cette œuvre explore les espaces liminaires : les connexions entre le corps, l’espace et la technologie, ainsi que l’interaction entre les mondes visibles et invisibles. Un monde numérique peut-il renforcer la conscience de notre présence physique humaine ?
+
+Chacun des projets de Maxime repose sur des logiciels créatifs qu’il développe en interne. Animé par la volonté de rendre la création numérique plus accessible, il partage ses outils et son expertise à tous·tes, allant des artistes aux structures culturelles. En cassant les barrières techniques, il s’engage sur des collaborations transdisciplinaires avec des chorégraphes, metteur·euse·s en scène, musicien·ne·s, des illustrateur·rice·s et bien d’autres. Cette approche l’a conduit, au fil des années, à la création de formes artistiques hybrides et au développement d’une entreprise de logiciels créatifs.
+
+Les logiciels de Maxime sont utilisés dans de nombreuses œuvres diffusées à l’international, mais aussi réadaptés par des musées, festivals et structures culturelles pour des expériences immersives, de la médiation culturelle, des actions de sensibilisation et l’accessibilité. Parmi ses outils figurent *Revy*, une solution tout-en-un pour les créations en réalité augmentée ; *Audio Broadcaster*, permettant la transmission audio en temps réel à un public ; et *Live-maker*, une plateforme facilitant l’interaction publique à grande échelle via des smartphones.
+
+La vision artistique et l’engagement de Maxime ont été récompensés par de nombreuses tournées, conférences et distinctions internationales, notamment deux prix d’entrepreneuriat « Pépite » décernés par le Ministère français de l’Enseignement supérieur et de la Recherche.
+
+À travers son art, ses outils, et sa philosophie de partage, Maxime utilise la technologie pour créer du lien — rapprochant artistes, publics, et tout simplement, les gens.
+
+<br />
+<br />
+
+---
   
   
+### Selection d'expositions 
+- _[Let’s Draw](/livedrawing#content)_, **[Fête des Lumières de Lyon](https://www.fetedeslumieres.lyon.fr/fr)** <span style={{color:"dimgray"}}> — Lyon, France, Décembre 2024</span>
+- _Sensory Overload_, **ROM After Dark, [Royal Ontario Museum](https://www.rom.on.ca/)** <span style={{color:"dimgray"}}> — Toronto, Canada, Novembre 2024</span>
+- _Mosaïques_, **[Festival de la Francophonie](https://francophonie2024.gouv.fr/refaire-le-monde-le-festival-de-la-francophonie/index.html), [104](https://www.104.fr/)** <span style={{color:"dimgray"}}> — Paris, Octobre 2024</span>
+- _[Painting Mirror](/painting-mirror#content) façon impressionistes_, **[National Gallery of Ireland](https://www.nationalgallery.ie/)** <span style={{color:"dimgray"}}> — Dublin, Irlande, Septembre 2024</span>
+- _[Let’s Draw](/livedrawing#content)_, **Galway City** <span style={{color:"dimgray"}}> — Galway, Irlande, Septembre 2024</span>
+- _[Let’s Draw](/livedrawing#content)_, **Ballina Arts Centre** <span style={{color:"dimgray"}}> — Ballina, Irlande, Septembre 2024</span>
+- _[The Invisible Party](/the-invisible-party#content)_, **[Enter Art Fair](https://www.enterartfair.com/)** <span style={{color:"dimgray"}}> — Copenhague, Danemark, Août 2024</span>
+- _Nos Jogos Olimpicos_, **[Instituto Reaçaō](https://institutoreacao.org.br/)** <span style={{color:"dimgray"}}> — Brésil, 12 villes en simultané, Mai - Août 2024</span>
+- _[Let’s Draw](/livedrawing#content)_, **Novembre Numérique** <span style={{color:"dimgray"}}> — Santiago, République Dominicaine, Décembre 2023</span>
+- _[Painting Mirror](/painting-mirror#content)_, **[Museo de Arto Moderno, Bogota](https://www.mambogota.com/en/)** <span style={{color:"dimgray"}}> — Bogota, Colombie, Novembre 2023</span>
+- _[Let’s Draw](/livedrawing#content)_, **[Voltaje Salón de Arte y Tecnología](https://voltaje.co/)** <span style={{color:"dimgray"}}> — Bogota, Colombie, Novembre 2023</span>
+- _[Let’s Draw](/livedrawing#content)_, **Miradas Festival** <span style={{color:"dimgray"}}> — Medellín, Colombie, Novembre 2023</span>
+- _[Let’s Draw](/livedrawing#content)_, **Novembre Numérique** <span style={{color:"dimgray"}}> — Arequipa, Pérou, Novembre 2023</span>
+- _[Painting Mirror](/painting-mirror#content) façon Cézanne_, **[National Gallery of Ireland](https://www.nationalgallery.ie/)** <span style={{color:"dimgray"}}> — Dublin, Irlande, Septembre 2023</span>
+- _[Painting Mirror](/painting-mirror#content) façon street art local_, **Chartres en Lumières** <span style={{color:"dimgray"}}> — Chartres, France, Septembre 2023</span>
+- _[Painting Mirror](/painting-mirror#content) façon peintres corses_, **Festi Lumi** <span style={{color:"dimgray"}}> — Bonifacio, France, Juillet 2023</span>
 
-#### Distinctions, Récompenses, Expositions
+_Portfolio complet sur demande_
 
-- (A venir) A suivre sur [Instagram](http://instagram.com/maximetouroute)
 
-- (2023) Projection Mapping, Prague  
-  **[Live Drawing](/livedrawing#content)**
+### Workshops et talks récents
 
-- (2023) Projection Mapping, Culture Night, Dublin  
-  **[Painting Mirror](/painting-mirror#content)**
+- _AI and the creative process - Insights from leading creators_ with [Maziar Gadheri](https://maziart.ca/) & [Debbie Deer](https://www.debbiedeerproductions.com/) - Moderation by [Shauna Jean Doherty](https://www.shaunajeandoherty.com/), [OCAD University](https://www.ocadu.ca/) <span style={{color:"dimgray"}}> — Toronto, Canada, Novembre 2024</span> 
+- _Des logiciels partagés pour la création numérique : Réalité Augmentée, Interaction Massive, Audio temps-réel_, [Biennale Chroniques](https://chroniques.org/rendez-vous/biennale-2024/) <span style={{color:"dimgray"}}> — Marseille, France, Novembre 2024</span>
+- _Patrimoine et Numérique - Développement technologique et approche sensible_, [Biennale Chroniques](https://chroniques.org/rendez-vous/biennale-2024/) <span style={{color:"dimgray"}}> — Marseille, France, Novembre 2024</span> 
+- _Fusion in Motion: Dance Meets Augmented Reality, avec [Natacha Paquignon](https://natachapaquignon.com)_, [Enter Art Fair](https://www.enterartfair.com/) + [Institut Français](https://institutfrancais.dk/fr) <span style={{color:"dimgray"}}> — Copenhague, Danemark, Août 2024</span> 
+- Introduction to Videomapping and Augmented Reality, [Galway University](https://www.universityofgalway.ie/), [Bêta Festival](https://betafestival.ie/), [National College or Arts and Design](https://www.ncad.ie/), [CREW](https://crewdigital.ie/)<span style={{color:"dimgray"}}> — Dublin+Galway+Tuam, Dublin, Septembre 2024</span> 
+- _Des logiciels partagés pour la création numérique : Réalité Augmentée, Interaction Massive, Audio temps-réel_, [Spectacle Vivant Scènes Numériques](https://spectaclevivant-scenesnumeriques.fr/) <span style={{color:"dimgray"}}> — Avignon, France, Juillet 2024</span>
+- _Une Réalité Augmentée au service de nouvelles écritures_, Forum Entreprendre, [Ministère de la Culture](https://www.culture.gouv.fr/)<span style={{color:"dimgray"}}> — Paris, Juin 2024</span> 
 
-- (2023) Chartres Light Festival, France  
-  **[Painting Mirror](/painting-mirror#content)**
 
-- (2023) Of a Mind, Irlande  
-  **Création originale avec [Audio Broadcaster](/audio-broadcaster#content) Produit par [Listen and Breathe](//www.listenandbreathe.live)**
+### Parcours Entrepreneurial
 
-- (2023) Le Grand Déménagement du CCO, Villeurbanne  
- **Création originale avec [Audio Broadcaster](/audio-broadcaster#content) Produit par [Natacha Paquignon](//natachapaquignon.com)** 
+- _Incubateur Éphémère de la Culture_ [Ministère de la Culture](https://www.culture.gouv.fr/) <span style={{color:"dimgray"}}> — Paris, 2024 - Aujourd'hui</span> 
+- _XR Partner_, [New Images Festival](https://newimages-hub.com/en/)  <span style={{color:"dimgray"}}> — Paris, Avril 2024</span> 
+- _Incubation [Pole Pixel](https://polepixel.fr/)_  <span style={{color:"dimgray"}}> — Lyon, France, 2023 - Aujourd'hui</span> 
+- Incubation [Paris & Co](https://www.parisandco.com/) <span style={{color:"dimgray"}}> — Paris, 2022</span> 
+- _2 fois Lauréat Prix pépite_, [Ministère de l'Enseignement Supérieur et de la Recherche](https://www.enseignementsup-recherche.gouv.fr/fr) et [Pépite France](https://www.pepite-france.fr/)<span style={{color:"dimgray"}}> — 2020 et 2022</span> 
+- Incubation [Station F](https://stationf.co/) <span style={{color:"dimgray"}}> — Paris, 2021</span> 
 
-- (2023) Art Residency, Cité des Sciences, Paris  
-  **Workshops and XR content creation with families and public**
-  **[Reveality](/reveality#content)**
+### Presse
 
-- (2023) Festi Lumi, Mapping, Corse  
- **[Painting Mirror](/painting-mirror#content)** 
-
-- (2023) Nuit Blanche, Mapping, Paris  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2023) Festival Parades, Mapping, Paris  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2022) Résidence à la Maison des Métallos, Paris  
- **Développement de [Smart Faune](/smart-faune#content) Produit par [Naïf Production](//naif-production.fr)**  
-
-- (2022) Digital November, Mapping à distance, Yanhon, Birmanie  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2022) Exposition, Mapping, Johannesbourg, Afrique du Sud  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2022) Festival de la Science, Exposition Réalité Augmentée  
-  **Produit par [Natacha Paquignon](https://www.natachapaquignon.com/)**
-
-- (2022) **Prix Pépite Ile-De-France pour [Reveality](https://www.reveality.io/)  
-  **Remis par [Pepite France](https://www.pepite-france.fr/)**
-
-- (2022) Mapping sur Dôme, Plemeur-Bodou  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2022) Mapping et Atelier, Tunis, Tunisie  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2022) Mapping décentralisé multi-lieux, Nantes  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) Fête des Lumières de Bron  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) [Festival Pléiades St Etienne](https://www.saint-etienne.fr/pl%C3%A9iades-festival-des-arts-num%C3%A9riques)  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) [Le Phare à Marseille // Lieux Publics](https://www.lieuxpublics.com/fr/agenda/residence-le-phare)  
-  **[Le Phare](/le-phare#content)**
-
-- (2021) [Salon du livre jeunesse de Troyes](https://lecture-loisirs.com/salon/)  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) [Festival Des Blocs](https://desblocs.be/)  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) Nuit de la Création, la Motte Servolex  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) [L’Aventure Ordinaire #7 // CCO Villeurbanne](https://www.cco-villeurbanne.org/laventure-ordinaire-7/)  
-  **[Space Dances](/spacedances#content)**
-
-- (2021) [Culture Night](https://culturenight.ie/)  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) [Les Invites de Villeurbanne](https://invites.villeurbanne.fr/)  
-  **[Le Phare](/le-phare#content)**
-
-- (2021) [Chalon dans la Rue](https://www.chalondanslarue.com/)  
-  **Premiere of [Le Phare](/le-phare#content)**
-
-- (2021) [Spraying Board (2nd Edition)](https://sprayingboard.thedailyboard.co/)  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) City scale AR holographic dance experience  
-  **[Lieux Miroir](/spacedances#content) at Aubusson**
-
-- (2021) Music Festival - Beijing  
-  **[Monolith](/monolith#content) w [French Institute](https://www.institutfrancais.com)**
-
-- (2020) Novtec - Lima, Peru  
-  **Remotely controlled Projection [Live Drawing](/livedrawing#content)**
-
-- (2020) Digital November - Copenhagen, Danemark  
-  **Remotely controlled Projection [Live Drawing](/livedrawing#content) w [French Institute](https://www.institutfrancais.com)**
-
-- (2020) **Pepite des Pépites** award for [Draw From The Window](/drawfromthewindow#content)  
-  **Delivered by [Pepite France](https://www.pepite-france.fr/)**
-
-- (2020) European Heritage Days  
-  **[Space Dances](/spacedances#content)**
-
-- (2020) Culture Night - Dublin, Ireland  
-  **Cross-country Interactive Projection between Dublin and Paris [Live Drawing](/livedrawing#content)**
-
-- (2020) [Draw From The Window](/drawfromthewindow#content)  
-  **Nationwide Interactive Projection during France lockdown**
-
-- (2020) [Spraying Board](https://sprayingboard.thedailyboard.co/)  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2020) Copenhagen Light Festival  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2020) Calgary Winter Lights Festival  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2020) Lyon Young and Culture House  
-  **[Humanlapse](/humanlapseProject#content)**
-
-- (2019) Le Creusot Video Game Festival  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2019) Lyon Young Film Festival  
-  **Film Projection "Les étoiles du LYF" [Réalité](/realite#content)**
-
-- (2019) Citizen Global Film Festival  
-  **Official Selection with [Innocent Words](/innocentWords#content)**
-
-- (2019) Chevagny Art Festival  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2019) Toï Toï Le Zinc  
-  **[Humanlapse](/humanlapseProject#content)**
-
-- (2019) Festi Lumi Light Festival  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2019) Red Cross and Health Film Festival  
-  **Official Selection with [Réalité](/realite#content)**
-
-- (2019) Peinture Fraiche Street Art Festival  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2019) Comete Film Festival  
-  **Official Selection [Réalité](/realite#content)**
-
-- (2018) Lyon Light Festival (off)  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2019) Lyon City Hall  
-  **Premiere of [Humanlapse](/humanlapseProject#content)**
-
-- (2018) Mobile Film Festival  
-  **Official Selection with [Innocent Words](/innocentWords#content)**
-
-- (2018) Lyon Young Film Festival  
-  **Official Selection with [Réalité](/realite#content)**
-
-- (2017) Student Photo contest "Wild"  
-  **2nd regional prize**
+- _[C'est quoi ton job? Maxime Touroute, Creative Technologist](https://fisheyeimmersive.com/article/cest-quoi-ton-job-maxime-touroute-creative-technologist/)_, rédaction Maxime Delcourt, **[Fish Eye Immersive](https://fisheyeimmersive.com/)**
+- _[Faut-il repenser la diffusion à l'heure de la XR ?](https://hacnum.org/hacnumedia/faut-il-repenser-la-diffusion-a-lheure-de-la-xr/)_, rédaction Maxence Grugier, **[Hacnum](https://hacnum.org/)** et **[XR Must](https://xrmust.com/)**
