--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -8,212 +8,99 @@ description: About Maxime Touroute
 image: profile.jpg
 priority: 0
 embeddedImagesLocal:
-  - profile.jpg
+  - Maxime_CJuliaGuerin.jpg
 ---
 
-<MdxImage alt={"Portrait picture of Maxime Touroute"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]}/>
+<MdxImage alt={"Photo portrait de Maxime Touroute"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
 
+<br/>
+_« I work on projects where creativity and technology meet, alongside artistic teams and cultural organisations of all kinds. I explore state of the art technologies to unlock new creative possibilities. I actively share my creative software with everyone to break down technical costs, foster collaboration and democratise digital creation. Being also a full-fledged engineer and entrepreneur, I'm not afraid to tackle the most challenging ideas. »_
 <br />
-<br />
+— What I do
+* Create and exhibit my artworks
+* Join artistic teams as an engineer and artist
+* Assist cultural institutions for their projects on mediation, accessibility and cultural outreach
+* Build and share software with cultural institutions and creators
 
-
-Passionate by cinema, photography and digital arts, I work on projects where creativity and technology meet.
-
-Being a full-fledged engineer, I'm not afraid to work with state of the art technologies to unlock new creative possibilities.
-
-### — What I do
-
-* Join artistic teams as a developer, technician, videographer
-* Create and exhibit digital artworks
-* Build and share software with cultural institutions and artists
-
-
-### — My skills
-
+— My skills
 * Software development (web, AI, 3D, native...)
-* Art Direction, production
-* Project management, team management
-* Entrepreneurship
-* Film making from shooting to post-production
+* Art Direction (film, projection mapping, augmented reality, hybrid creations in dance, theater, music, street art...)
+* Project management, entrepreneurship
 
+*— Currently open to new projects, [contact@maximetouroute.com](mailto:contact@maximetouroute.com)*
 
+<br />
+<br />
 
-### — Currently open to new projects 
-[contact@maximetouroute.com](mailto:contact@maximetouroute.com)
+___
 
-<br/>
-<br/>
-<br/>
+<br />
+<br />
 
+# Bio 
 
-<br/>
-<br/>
-<br/>
+__Maxime Touroute is an artist exploring spaces where technology and humanity intersect.__
+
+His work investigates how our most human traits—creativity, interaction, and togetherness—are reshaped by the digital age. Through participatory and immersive experiences, Maxime invites audiences to reflect on the connections that unite us in a world shaped by technology.
+
+His first work, *Let’s Draw* *(80+ exhibitions, 10 countries)*, transforms public spaces into massive, interactive canvases, inviting participants to draw together in real time through projection mapping. By harnessing technology to amplify collective creation, *Let’s Draw* unveils shared and collective imaginaries of themes that resonate universally : how to draw a tree, how to draw love, how to draw our world?
+
+His latest piece, *The Invisible Party (co-author Natacha Paquignon, co-produced by Enter Art Fair), is a Mixed Reality dance performance where dancers interacts with a virtual representation of themselves, exploring liminal spaces - the connections between body, space, and technology, as well as the interplay of visible and invisible realms. Can a digital world heighten awareness of our physical human presence?*
+
+Each of Maxime’s projects is powered by creative software he develops in-house. His dedication to making digital creation more accessible drives him to share his tools and expertise with a broad community of actors, from artists to cultural institutions. By breaking down technical barriers, he engages in cross-disciplinary collaborations with dancers, theater makers, musicians, illustrators, and more. Over the years, this approach has led him to the creation of hybrid artistic forms and a creative software company.
+
+Maxime’s software is currently used in numerous artworks distributed internationally but also repurposed by museums, festivals and cultural institutions for immersive experiences, cultural mediation, cultural outreach and accessibility. His tools include *Revy*, an all-in-one solution for Augmented Reality creations; *Audio Broadcaster*, enabling seamless real-time audio transmission to an audience; and *Live-maker*, a platform that facilitates large-scale public interaction through smartphones.
+
+Maxime’s artistic vision and engagement have been rewarded by numerous international tours, talks and awards including two entrepreneurship “Pépite” awards from the French Ministry of Higher Education and Research.
+
+Through his art, tools, and philosophy of sharing, Maxime uses technology to foster human connections, bringing artists, audiences, and simply, people closer.
+
+<br />
+<br />
+
+---
   
+### Exhibition Selection
 
-#### Distinctions, Awards, Exhibitions
+- _[Let’s Draw](/livedrawing#content)_, **[Fête des Lumières de Lyon](https://www.fetedeslumieres.lyon.fr/fr)** <span style={{color:"dimgray"}}> — Lyon, France, December 2024</span>
+- _Sensory Overload_, **ROM After Dark, [Royal Ontario Museum](https://www.rom.on.ca/)** <span style={{color:"dimgray"}}> — Toronto, Canada, November 2024</span>
+- _Mosaïques_, **[Festival de la Francophonie](https://francophonie2024.gouv.fr/refaire-le-monde-le-festival-de-la-francophonie/index.html), [104](https://www.104.fr/)** <span style={{color:"dimgray"}}> — Paris, October 2024</span>
+- _[Painting Mirror](/painting-mirror#content) in an Impressionist Style_, **[National Gallery of Ireland](https://www.nationalgallery.ie/)** <span style={{color:"dimgray"}}> — Dublin, Ireland, September 2024</span>
+- _[Let’s Draw](/livedrawing#content)_, **Galway City** <span style={{color:"dimgray"}}> — Galway, Ireland, September 2024</span>
+- _[Let’s Draw](/livedrawing#content)_, **Ballina Arts Centre** <span style={{color:"dimgray"}}> — Ballina, Ireland, September 2024</span>
+- _[The Invisible Party](/the-invisible-party#content)_, **[Enter Art Fair](https://www.enterartfair.com/)** <span style={{color:"dimgray"}}> — Copenhagen, Denmark, August 2024</span>
+- _Nos Jogos Olimpicos_, **[Instituto Reaçaō](https://institutoreacao.org.br/)** <span style={{color:"dimgray"}}> — Brazil, 12 cities simultaneously, May - August 2024</span>
+- _[Let’s Draw](/livedrawing#content)_, **Novembre Numérique** <span style={{color:"dimgray"}}> — Santiago, Dominican Republic, December 2023</span>
+- _[Painting Mirror](/painting-mirror#content)_, **[Museo de Arte Moderno, Bogotá](https://www.mambogota.com/en/)** <span style={{color:"dimgray"}}> — Bogotá, Colombia, November 2023</span>
+- _[Let’s Draw](/livedrawing#content)_, **[Voltaje Salón de Arte y Tecnología](https://voltaje.co/)** <span style={{color:"dimgray"}}> — Bogotá, Colombia, November 2023</span>
+- _[Let’s Draw](/livedrawing#content)_, **Miradas Festival** <span style={{color:"dimgray"}}> — Medellín, Colombia, November 2023</span>
+- _[Let’s Draw](/livedrawing#content)_, **Novembre Numérique** <span style={{color:"dimgray"}}> — Arequipa, Peru, November 2023</span>
+- _[Painting Mirror](/painting-mirror#content) in Cézanne’s Style_, **[National Gallery of Ireland](https://www.nationalgallery.ie/)** <span style={{color:"dimgray"}}> — Dublin, Ireland, September 2023</span>
+- _[Painting Mirror](/painting-mirror#content) in Local Street Art Style_, **Chartres en Lumières** <span style={{color:"dimgray"}}> — Chartres, France, September 2023</span>
+- _[Painting Mirror](/painting-mirror#content) in Corsican Painters’ Style_, **Festi Lumi** <span style={{color:"dimgray"}}> — Bonifacio, France, July 2023</span>
 
-- (Upcoming Events) Check my [Instagram](http://instagram.com/maximetouroute)
+_Full portfolio available upon request_
 
-- (2023) Projection Mapping, Prague  
-  **[Live Drawing](/livedrawing#content)**
+### Recent Workshops and Talks
 
-- (2023) Projection Mapping, Culture Night, Dublin  
-  **[Painting Mirror](/painting-mirror#content)**
+- _AI and the Creative Process - Insights from Leading Creators_ with [Maziar Gadheri](https://maziart.ca/) & [Debbie Deer](https://www.debbiedeerproductions.com/) - Moderation by [Shauna Jean Doherty](https://www.shaunajeandoherty.com/), [OCAD University](https://www.ocadu.ca/) <span style={{color:"dimgray"}}> — Toronto, Canada, November 2024</span> 
+- _Shared Software for Digital Creation: Augmented Reality, Massive Interaction, Real-Time Audio_, [Chroniques Biennial](https://chroniques.org/rendez-vous/biennale-2024/) <span style={{color:"dimgray"}}> — Marseille, France, November 2024</span>
+- _Heritage and Digital: Technological Development and a Sensitive Approach_, [Chroniques Biennial](https://chroniques.org/rendez-vous/biennale-2024/) <span style={{color:"dimgray"}}> — Marseille, France, November 2024</span> 
+- _Fusion in Motion: Dance Meets Augmented Reality, with [Natacha Paquignon](https://natachapaquignon.com)_, [Enter Art Fair](https://www.enterartfair.com/) + [Institut Français](https://institutfrancais.dk/fr) <span style={{color:"dimgray"}}> — Copenhagen, Denmark, August 2024</span> 
+- _Introduction to Videomapping and Augmented Reality_, [Galway University](https://www.universityofgalway.ie/), [Bêta Festival](https://betafestival.ie/), [National College of Art and Design](https://www.ncad.ie/), [CREW](https://crewdigital.ie/)<span style={{color:"dimgray"}}> — Dublin+Galway+Tuam, Ireland, September 2024</span> 
+- _Shared Software for Digital Creation: Augmented Reality, Massive Interaction, Real-Time Audio_, [Spectacle Vivant Scènes Numériques](https://spectaclevivant-scenesnumeriques.fr/) <span style={{color:"dimgray"}}> — Avignon, France, July 2024</span>
+- _Augmented Reality for New Forms of Storytelling_, Forum Entreprendre, [French Ministry of Culture](https://www.culture.gouv.fr/)<span style={{color:"dimgray"}}> — Paris, June 2024</span> 
 
-- (2023) Chartres Light Festival, France  
-  **[Painting Mirror](/painting-mirror#content)**
+### Entrepreneurial Journey
 
-- (2023) Of a Mind, Irlande
-  **Performance using [Audio Broadcaster](/audio-broadcaster#content) Produced by [Listen and Breathe](//www.listenandbreathe.live)**
+- _Ephemeral Incubator for Culture_, [French Ministry of Culture](https://www.culture.gouv.fr/) <span style={{color:"dimgray"}}> — Paris, 2024 - Present</span> 
+- _XR Partner_, [New Images Festival](https://newimages-hub.com/en/)  <span style={{color:"dimgray"}}> — Paris, April 2024</span> 
+- _Incubation at [Pole Pixel](https://polepixel.fr/)_  <span style={{color:"dimgray"}}> — Lyon, France, 2023 - Present</span> 
+- _Incubation at [Paris & Co](https://www.parisandco.com/)_ <span style={{color:"dimgray"}}> — Paris, 2022</span> 
+- _2-Time Pépite Prize Winner_, [Ministry of Higher Education and Research](https://www.enseignementsup-recherche.gouv.fr/fr) and [Pépite France](https://www.pepite-france.fr/)<span style={{color:"dimgray"}}> — 2020 and 2022</span> 
+- _Incubation at [Station F](https://stationf.co/)_ <span style={{color:"dimgray"}}> — Paris, 2021</span> 
 
-- (2023) Le Grand Déménagement du CCO, Villeurbanne  
- **Performance using [Audio Broadcaster Software](/audio-broadcaster#content) Produced by [Natacha Paquignon](//natachapaquignon.com)** 
+### Press
 
-- (2023) Art Residency, Cité des Sciences, Paris  
-  **Workshops and XR content creation with families and public**
-  **[Reveality](/reveality#content)**
-
-- (2023) Festi Lumi, Mapping, Corse  
- **[Painting Mirror](/painting-mirror#content)** 
-
-- (2023) Nuit Blanche, Mapping, Paris  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2023) Festival Parades, Mapping, Paris  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2022) Art Residency at la Maison des Métallos, Paris  
- **[Smart Faune](/smart-faune#content)**  
-
-- (2022) Digital November, Remote Mapping, Yanhon, Myanmar  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2022) Exhibition, mapping, Johannesbourg, South Africa  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2022) Festival de la Science, Exposition Réalité Augmentée  
-  **Produit par [Natacha Paquignon](https://www.natachapaquignon.com/)**
-
-- (2022) **Pépite Prize Ile-De-France** for [Reveality](https://www.reveality.io/)  
-  **Delivered by [Pepite France](https://www.pepite-france.fr/)**
-
-- (2022) Dome Mapping, Plemeur-Bodou  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2022) Mapping & Workshop, Tunis, Tunisie  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2022) Decentralised Mapping in multiple locations, Nantes  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) Bron Light Festival  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) [Festival Pléiades St Etienne](https://www.saint-etienne.fr/pl%C3%A9iades-festival-des-arts-num%C3%A9riques)  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) [Le Phare à Marseille // Lieux Publics](https://www.lieuxpublics.com/fr/agenda/residence-le-phare)  
-  **[Le Phare](/le-phare#content)**
-
-- (2021) [Salon du livre jeunesse de Troyes](https://lecture-loisirs.com/salon/)  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) [Festival Des Blocs](https://desblocs.be/)  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) Nuit de la Création, la Motte Servolex  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) [L’Aventure Ordinaire #7 // CCO Villeurbanne](https://www.cco-villeurbanne.org/laventure-ordinaire-7/)  
-  **[Space Dances](/spacedances#content)**
-
-- (2021) [Culture Night](https://culturenight.ie/)  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) [Les Invites de Villeurbanne](https://invites.villeurbanne.fr/)  
-  **[Le Phare](/le-phare#content)**
-
-- (2021) [Chalon dans la Rue](https://www.chalondanslarue.com/)  
-  **Premiere of [Le Phare](/le-phare#content)**
-
-- (2021) [Spraying Board (2nd Edition)](https://sprayingboard.thedailyboard.co/)  
-  **[Live Drawing](/livedrawing#content)**
-
-- (2021) City scale AR holographic dance experience  
-  **[Lieux Miroir](/spacedances#content) at Aubusson**
-
-- (2021) Music Festival - Beijing  
-  **[Monolith](/monolith#content) w [French Institute](https://www.institutfrancais.com)**
-
-- (2020) Novtec - Lima, Peru  
-  **Remotely controlled Projection [Live Drawing](/livedrawing#content)**
-
-- (2020) Digital November - Copenhagen, Danemark  
-  **Remotely controlled Projection [Live Drawing](/livedrawing#content) w [French Institute](https://www.institutfrancais.com)**
-
-- (2020) **Pepite des Pépites** award for [Draw From The Window](/drawfromthewindow#content)  
-  **Delivered by [Pepite France](https://www.pepite-france.fr/)**
-
-- (2020) European Heritage Days  
-  **[Space Dances](/spacedances#content)**
-
-- (2020) Culture Night - Dublin, Ireland  
-  **Cross-country Interactive Projection between Dublin and Paris [Live Drawing](/livedrawing#content)**
-
-- (2020) [Draw From The Window](/drawfromthewindow#content)  
-  **Nationwide Interactive Projection during France lockdown**
-
-- (2020) [Spraying Board](https://sprayingboard.thedailyboard.co/)  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2020) Copenhagen Light Festival  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2020) Calgary Winter Lights Festival  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2020) Lyon Young and Culture House  
-  **[Humanlapse](/humanlapseProject#content)**
-
-- (2019) Le Creusot Video Game Festival  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2019) Lyon Young Film Festival  
-  **Film Projection "Les étoiles du LYF" [Réalité](/realite#content)**
-
-- (2019) Citizen Global Film Festival  
-  **Official Selection with [Innocent Words](/innocentWords#content)**
-
-- (2019) Chevagny Art Festival  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2019) Toï Toï Le Zinc  
-  **[Humanlapse](/humanlapseProject#content)**
-
-- (2019) Festi Lumi Light Festival  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2019) Red Cross and Health Film Festival  
-  **Official Selection with [Réalité](/realite#content)**
-
-- (2019) Peinture Fraiche Street Art Festival  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2019) Comete Film Festival  
-  **Official Selection [Réalité](/realite#content)**
-
-- (2018) Lyon Light Festival (off)  
-  **[Live Drawing Project](/livedrawing#content)**
-
-- (2019) Lyon City Hall  
-  **Premiere of [Humanlapse](/humanlapseProject#content)**
-
-- (2018) Mobile Film Festival  
-  **Official Selection with [Innocent Words](/innocentWords#content)**
-
-- (2018) Lyon Young Film Festival  
-  **Official Selection with [Réalité](/realite#content)**
-
-- (2017) Student Photo contest "Wild"  
-  **2nd regional prize**
+- _[What's Your Job? Maxime Touroute, Creative Technologist](https://fisheyeimmersive.com/article/cest-quoi-ton-job-maxime-touroute-creative-technologist/)_, by Maxime Delcourt, **[Fish Eye Immersive](https://fisheyeimmersive.com/)**
+- _[Should We Rethink Distribution in the XR Era?](https://hacnum.org/hacnumedia/faut-il-repenser-la-diffusion-a-lheure-de-la-xr/)_, by Maxence Grugier, **[Hacnum](https://hacnum.org/)** and **[XR Must](https://xrmust.com/)**
