New : add photo credits

--- a/src/pages/page-about/index.fr.mdx
+++ b/src/pages/page-about/index.fr.mdx
@@ -12,6 +12,7 @@ embeddedImagesLocal:
 ---
 
 <MdxImage alt={"Photo portrait de Maxime Touroute par Julia Guérin"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
+<div style={{color: "dimgray", margin: "auto", textAlign: "center", fontSize: "0.8rem"}}>*© [Julia Guérin](https://www.juliaguerin.fr/)*</div>
 
 <br/>
 _« Je m’investis sur des projets où création et technologie se rencontrent, en collaboration avec tous types d’artistes et structures culturelles. J’explore les technologies à l’état de l’art pour débloquer de nouveaux possibles créatifs. Je partage mes logiciels avec tous pour casser les barrières techniques, encourager la collaboration et démocratiser la création numérique. Formé ingénieur et entrepreneur, je n'ai pas peur des challenges technico-créatifs. »_
