--- a/src/pages/page-about/index.mdx
+++ b/src/pages/page-about/index.mdx
@@ -11,7 +11,9 @@ embeddedImagesLocal:
   - Maxime_CJuliaGuerin.jpg
 ---
 
-<MdxImage alt={"Photo portrait de Maxime Touroute"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
+<MdxImage alt={"Portrait Picture of Maxime Touroute by Julia Guérin"} image={props.data.mdx.frontmatter.embeddedImagesLocal[0]} />
+<div style={{color: "dimgray", margin: "auto", textAlign: "center", fontSize: "0.8rem"}}>*© [Julia Guérin](https://www.juliaguerin.fr/)*</div>
+
 
 <br/>
 _« I work on projects where creativity and technology meet, alongside artistic teams and cultural organisations of all kinds. I explore state of the art technologies to unlock new creative possibilities. I actively share my creative software with everyone to break down technical costs, foster collaboration and democratise digital creation. Being also a full-fledged engineer and entrepreneur, I'm not afraid to tackle the most challenging ideas. »_
